<!--
  ~ Copyright 2014 Timothy Yu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_schedule_24dp"
            android:title="@string/nav_schedules">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_continuous"
                        android:icon="@drawable/ic_schedule_24dp"
                        android:title="@string/nav_continuous"/>
                    <item
                        android:id="@+id/nav_late_night"
                        android:icon="@drawable/ic_schedule_24dp"
                        android:title="@string/nav_late_night"/>
                    <item
                        android:id="@+id/nav_weekend"
                        android:icon="@drawable/ic_schedule_24dp"
                        android:title="@string/nav_weekend"/>
                    <item
                        android:id="@+id/nav_alt_continuous"
                        android:icon="@drawable/ic_schedule_24dp"
                        android:title="@string/nav_alt_continuous"/>
                    <item
                        android:id="@+id/nav_modified"
                        android:icon="@drawable/ic_schedule_24dp"
                        android:title="@string/nav_modified"/>
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_description_24dp"
            android:title="@string/nav_policies"/>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/nav_faq"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/nav_about"/>
    </group>
</menu>
