<!--
  ~ Copyright 2014 Timothy Yu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">GallyShuttle</string>
    <string name="google_play_link">market://details?id=com.ephemeraldreams.gallyshuttle</string>
    <string name="web_google_play_link">https://play.google.com/store/apps/details?id=com.ephemeraldreams.gallyshuttle</string>

    <!-- Activity labels -->
    <string name="home_activity_label">HomeActivity</string>
    <string name="schedule_activity_label">ScheduleActivity</string>
    <string name="settings_activity_label">SettingsActivity</string>
    <string name="about_activity_label">AboutActivity</string>
    <string name="webview_activity_label">WebviewActivity</string>

    <!-- Navigation Drawer text -->
    <string name="nav_home">Home</string>
    <string name="nav_arrival_countdown">Arrival Countdown Timer</string>
    <string name="nav_schedules">Schedules</string>
    <string name="nav_continuous">Continuous</string>
    <string name="nav_alt_continuous">Alternate Continuous</string>
    <string name="nav_late_night">Late Night</string>
    <string name="nav_weekend">Weekend</string>
    <string name="nav_modified">Modified</string>
    <string name="nav_policies">Policies</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_open_desc">Open navigation drawer</string>
    <string name="nav_close_desc">Close navigation drawer</string>

    <!-- General text -->
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>

    <!-- Path data entries -->
    <string name="path_continuous">continuous</string>
    <string name="path_alt_continuous">alt_continuous</string>
    <string name="path_late_night">late_night</string>
    <string name="path_weekend">weekend</string>
    <string name="path_modified">modified</string>

    <!-- Network text -->
    <string name="connection_timed_out_message">Connection timed out.</string>
    <string name="no_connection_message">No connection.</string>
    <string name="retry_message">RETRY</string>
    <string name="loading_schedule_message">Loading schedule</string>

    <!-- Rate dialog text -->
    <string name="rate_dialog_title">Rate This App</string>
    <string name="rate_dialog_message">
        If you found this app useful, please take a moment to rate this app! It won\'t take more than
        a minute. Thank you for your support!
    </string>
    <string name="rate_now_dialog_button">Rate now</string>
    <string name="rate_later_dialog_button">Rate later</string>
    <string name="no_thanks_dialog_button">No, thanks</string>

    <!-- Google Play Services App Invite text -->
    <string name="action_deep_link">com.ephemeraldreams.gallyshuttle.appinvite.DEEP_LINK_ACTION</string>
    <string name="invitation_title">Send GallyShuttle App Invitation</string>
    <string name="invitation_message">Keep track of and view Gallaudet University shuttle\' schedules with this app!</string>
    <string name="invitation_deep_link">gallyshuttle://invite</string>
    <string name="invitation_custom_image">http://gallyshuttle.appspot.com/img/ic_launcher.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_success">Sent invitations!</string>
    <string name="send_failed">Sending invitations failed.</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="invite_dialog_message">Enjoy using GallyShuttle!</string>

    <!-- HomeActivity text -->
    <string name="schedule_title_placeholder">Schedule</string>
    <string name="schedule_name_fmt">%1$s Schedule</string>
    <string name="timer_placeholder">--:--:--</string>
    <string name="arrival_message">Until arrival at:</string>
    <string name="arrival_time_placeholder">at --:--.</string>
    <string name="arrival_time_fmt">at %1$s.</string>
    <string name="notify_arrival_message">Notify me when shuttle arrives.</string>
    <string name="real_time_tracking_caption">Real-time tracking is not available, so shuttle may be early or late.</string>

    <!-- ScheduleActivity text -->
    <string name="alarm_dialog_title">Set Alarm</string>
    <string name="alarm_dialog_message_fmt">Pick an alarm time to set before %s before arrival time.</string>

    <!-- AboutActivity text -->
    <string name="logo_description">Gally Shuttle logo</string>
    <string name="copyright">Copyright © 2014 Timothy Yu</string>
    <string name="version_fmt">Version %1$s</string>
    <string name="underlined_credits"><u>Credits</u></string>
    <string name="underlined_rate_application"><u>Rate Application</u></string>
    <string name="underlined_support"><u>Support</u></string>
    <string name="underlined_open_source_licenses"><u>Open Source Licenses</u></string>
    <string name="underlined_terms_of_service"><u>Terms of Service</u></string>
    <string name="underlined_privacy_policy"><u>Privacy Policy</u></string>
    <string name="about_message">Gally Shuttle - Never miss a shuttle again!</string>
    <string name="send_to_chooser_title">Send email to developer</string>

    <!-- Accessibility content descriptions -->
    <string name="add_alarm_content_desc">Add alarm</string>

    <!-- Notification text -->
    <string name="notification_title">Gallaudet Shuttle Arriving Now!</string>
    <string name="notification_content">Gallaudet shuttle is arriving now at %1$s.</string>
</resources>
